--- a/BaloonPopsGame.Test/BaloonPopsGame.Test.csproj
+++ b/BaloonPopsGame.Test/BaloonPopsGame.Test.csproj
@@ -53,7 +53,7 @@
     <Compile Include="BaloonTest.cs" />
     <Compile Include="GameBoardTest.cs" />
     <Compile Include="PlayerTest.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="GameBoardGeneratorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
