--- a/BaloonPopsGame.Test/BaloonPopsGame.Test.csproj
+++ b/BaloonPopsGame.Test/BaloonPopsGame.Test.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.2.1502.0911\lib\net40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -55,6 +58,7 @@
     <Compile Include="PlayerTest.cs" />
     <Compile Include="GameBoardGeneratorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ColorFactoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BaloonPopsGame\BaloonsPopsGame.csproj">
@@ -62,7 +66,6 @@
       <Name>BaloonsPopsGame</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
